# sfc_autonomous_driving

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/include/trio_interface_ros2/: cmd_trio_motion_node.hpp  fsm_trio_motion_tcp.hpp
install/lib/trio_interface_ros2/: cmd_trio_main  fsm_trio_main
install/share/ament_index/resource_index/package_run_dependencies/: trio_interface_ros2
install/share/lidar_driver/: package.bash  package.sh  package.xml  package.zsh
install/share/lidar_driver/cmake/: lidar_driverConfig.cmake
install/share/trio_interface_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/trio_interface_ros2/launch/: trio_interface.launch.py
log/: latest_build
src/hardware/lidar_driver/: CMakeLists.txt  README.md
src/hardware/lidar_driver/launch/: my_rplidar.launch.py  rplidar.launch.py
src/hardware/trio_interface_ros2/: CMakeLists.txt
src/hardware/trio_interface_ros2/include/trio_interface_ros2/: cmd_trio_motion_tcp.hpp  fsm_trio_motion_node.hpp
src/hardware/trio_interface_ros2/src/: cmd_trio_main.cpp  cmd_trio_motion_node.cpp  cmd_trio_motion_tcp.cpp  fsm_trio_main.cpp  fsm_trio_motion_node.cpp  fsm_trio_motion_tcp.cpp
src/hardware/trio_interface_ros2/test/: cmd_vel_test_publisher.py  mock_fsm_sender.py  mock_trio_client.py
