<?xml version="1.0"?>
<package format="3">
  <name>lidar_driver</name>
  <version>0.1.0</version>
  <description>Launch wrapper for RPLIDAR S3 using rplidar_ros2</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
